Updated services page hero section with application form

--- a/services.html
+++ b/services.html
@@ -74,19 +74,15 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000">
-            <h1 class="mb-4">
-              Business Financing Solutions Tailored To Your Needs
-            </h1>
+            <h1 class="mb-4">APPLY NOW</h1>
             <p class="mb-4">
-              GoldStone offers a variety of financing options to help your
-              business grow, from merchant cash advances to equipment financing
-              and more.
+              In just a few easy steps, you can get your business the funding it
+              needs to expand, recover, market, launch, rebrand and more...
+              within 48 hours have the money in your account ready to move
+              forward.
             </p>
             <button class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0">
-              View All Services
-            </button>
-            <button class="btn btn-outline-light btn-lg mb-3 mb-lg-0">
-              Contact Us
+              MORE QUESTIONS?
             </button>
           </div>
           <div
@@ -95,12 +91,69 @@
             data-aos-duration="1000"
             data-aos-delay="200"
           >
-            <div class="hero-image-container">
-              <img
-                src="img/slide_2.jpg"
-                alt="Business Financing"
-                class="img-fluid rounded shadow-lg"
-              />
+            <div class="hero-form-card">
+              <h3 class="form-title mb-4">Apply for Credit</h3>
+              <form id="applyForm">
+                <div class="mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Enter amount here ($5,000 minimum)"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <select class="form-select" required>
+                    <option selected disabled value="">
+                      What are your monthly sales?
+                    </option>
+                    <option>below $5,000</option>
+                    <option>$5,000 - $25,000</option>
+                    <option>$25,000 - $50,000</option>
+                    <option>$50,000 - $100,000</option>
+                    <option>$100,000 - $500,000</option>
+                    <option>$500,000 or more</option>
+                  </select>
+                </div>
+                <div class="mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Full Name"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Business Name"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Email Address"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <input
+                    type="tel"
+                    class="form-control"
+                    placeholder="Phone Number"
+                    required
+                  />
+                </div>
+                <div id="formSuccess" class="alert alert-success mt-3 d-none">
+                  Thank you, we will contact you in 24 hours
+                </div>
+                <button type="submit" class="btn btn-qualify w-100">
+                  Submit
+                </button>
+              </form>
             </div>
           </div>
         </div>
