Updated services page with product sections

--- a/services.html
+++ b/services.html
@@ -169,345 +169,61 @@
       </div>
     </section>
 
-    <!-- Services Detailed Section -->
-    <section class="services-detailed-section">
-      <div class="container">
-        <div class="section-header text-center mb-5" data-aos="fade-up">
-          <h6 class="section-subtitle">Comprehensive Solutions</h6>
-          <h2 class="section-title">Our Financing Services</h2>
-          <div class="divider mx-auto"></div>
-          <p class="section-description">
-            GoldStone Funding Inc provides tailored financial solutions to help
-            your business thrive in today's competitive market
-          </p>
+    <!-- Why Our Product Section -->
+    <section class="product-difference-section">
+      <div class="container text-center">
+        <div class="product-difference-header position-relative">
+          <img
+            src="img/coin-icon.png"
+            alt="Coin"
+            class="coin-icon coin-left"
+            data-aos="fade-right"
+          />
+          <div data-aos="fade-up">
+            <h2 class="section-title">WHY OUR PRODUCT</h2>
+            <h2 class="section-subtitle">ARE DIFFERENT</h2>
+          </div>
+          <img
+            src="img/coin-icon.png"
+            alt="Coin"
+            class="coin-icon coin-right"
+            data-aos="fade-left"
+          />
         </div>
 
-        <div class="row mb-5" data-aos="fade-up">
-          <div class="col-lg-6 mb-4 mb-lg-0">
-            <div class="service-detail-image">
+        <div class="row mt-5 align-items-center">
+          <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
+            <div class="product-image">
               <img
                 src="img/slide_2.jpg"
-                alt="Business Cash Advance"
-                class="img-fluid rounded shadow"
+                alt="Business Meeting"
+                class="img-fluid rounded"
               />
             </div>
           </div>
-          <div class="col-lg-6">
-            <div class="service-detail-content">
-              <div class="icon-box mb-4">
-                <i class="material-icons">credit_card</i>
-              </div>
-              <h3>Business Cash Advance</h3>
+          <div class="col-lg-6 text-start" data-aos="fade-left">
+            <div class="product-content">
+              <h3>Funding at the speed of opportunity</h3>
               <p>
-                A business cash advance provides quick access to working capital
-                based on your future sales. Unlike traditional loans, repayment
-                is flexible and adjusts with your daily business revenue.
+                With fast, reliable funding through Fundbox, get the flexibility
+                you need to take advantage of whatever opportunities come your
+                way.
               </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Fast funding in as little
-                  as 24 hours
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> No fixed monthly payments
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Easy qualification process
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> No collateral required
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Flexible terms based on
-                  business performance
-                </li>
-              </ul>
-              <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="row mb-5 flex-row-reverse" data-aos="fade-up">
-          <div class="col-lg-6 mb-4 mb-lg-0">
-            <div class="service-detail-image">
-              <img
-                src="img/slide_2.jpg"
-                alt="Invoice & PO Factoring"
-                class="img-fluid rounded shadow"
-              />
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="service-detail-content">
-              <div class="icon-box mb-4">
-                <i class="material-icons">receipt_long</i>
-              </div>
-              <h3>Invoice & PO Factoring</h3>
-              <p>
-                Invoice factoring allows you to sell your unpaid invoices to get
-                immediate cash, improving your working capital and cash flow.
-                This solution is perfect for businesses that can't wait 30-90
-                days for client payments.
-              </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Immediate cash for unpaid
-                  invoices
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Improve cash flow
-                  management
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Eliminate waiting periods
-                  for client payments
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Finance up to 90% of
-                  invoice value
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> No additional debt on your
-                  balance sheet
-                </li>
-              </ul>
-              <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="row mb-5" data-aos="fade-up">
-          <div class="col-lg-6 mb-4 mb-lg-0">
-            <div class="service-detail-image">
-              <img
-                src="img/slide_2.jpg"
-                alt="Business Credit Lines"
-                class="img-fluid rounded shadow"
-              />
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="service-detail-content">
-              <div class="icon-box mb-4">
-                <i class="material-icons">account_balance</i>
-              </div>
-              <h3>Business Credit Lines</h3>
-              <p>
-                Our business credit lines provide flexible, revolving capital
-                that you can draw upon as needed. Similar to a credit card, you
-                only pay interest on the amount you use, making it perfect for
-                ongoing operational expenses.
-              </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Access funds as needed,
-                  when needed
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Only pay for what you use
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Credit line increases as
-                  your business grows
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Quick approval process
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Revolving credit that
-                  replenishes as you pay
-                </li>
-              </ul>
-              <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="row mb-5 flex-row-reverse" data-aos="fade-up">
-          <div class="col-lg-6 mb-4 mb-lg-0">
-            <div class="service-detail-image">
-              <img
-                src="img/slide_2.jpg"
-                alt="Equipment Leasing & Financing"
-                class="img-fluid rounded shadow"
-              />
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="service-detail-content">
-              <div class="icon-box mb-4">
-                <i class="material-icons">business</i>
-              </div>
-              <h3>Equipment Leasing & Financing</h3>
-              <p>
-                Our equipment financing solutions allow you to acquire the
-                machinery and technology your business needs without a large
-                upfront investment. Whether you're upgrading or expanding, we
-                can help you get equipped.
-              </p>
-              <ul class="service-features">
-                <li>
-                  <i class="fas fa-check-circle"></i> Preserve cash flow for
-                  other business needs
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Fixed payments for easier
-                  budgeting
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Options for new or used
-                  equipment
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Potential tax advantages
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Upgrade options as
-                  technology evolves
-                </li>
-              </ul>
-              <a href="#apply" class="btn btn-primary mt-3">Apply Now</a>
+              <button class="btn btn-outline-primary text-uppercase">
+                EXPANSION
+              </button>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Application Section -->
-    <section id="apply" class="application-section bg-light">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 pe-lg-5" data-aos="fade-right">
-            <div class="section-header mb-4">
-              <h6 class="section-subtitle">Ready To Grow?</h6>
-              <h2 class="section-title">Apply For Financing Today</h2>
-              <div class="divider"></div>
-            </div>
-            <p class="mb-4">
-              Getting the financing your business needs is quick and easy with
-              GoldStone Funding. Our application process is straightforward, and
-              you could receive funding in as little as 24 hours.
-            </p>
-            <div class="application-benefits mb-4">
-              <div class="benefit-item">
-                <div class="benefit-icon">
-                  <i class="fas fa-rocket"></i>
-                </div>
-                <div class="benefit-content">
-                  <h5>Fast Process</h5>
-                  <p>Simple application with quick approval decisions</p>
-                </div>
-              </div>
-              <div class="benefit-item">
-                <div class="benefit-icon">
-                  <i class="fas fa-file-alt"></i>
-                </div>
-                <div class="benefit-content">
-                  <h5>Minimal Documentation</h5>
-                  <p>Basic business information and bank statements</p>
-                </div>
-              </div>
-              <div class="benefit-item">
-                <div class="benefit-icon">
-                  <i class="fas fa-money-bill-wave"></i>
-                </div>
-                <div class="benefit-content">
-                  <h5>Quick Funding</h5>
-                  <p>Receive funds in as little as 24 hours after approval</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-left" data-aos-delay="200">
-            <div class="application-form-card">
-              <h3 class="form-title text-center mb-4">Apply Now</h3>
-              <form>
-                <div class="mb-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Business Name"
-                    required
-                  />
-                </div>
-                <div class="mb-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    placeholder="Full Name"
-                    required
-                  />
-                </div>
-                <div class="row mb-3">
-                  <div class="col">
-                    <input
-                      type="email"
-                      class="form-control"
-                      placeholder="Email Address"
-                      required
-                    />
-                  </div>
-                  <div class="col">
-                    <input
-                      type="tel"
-                      class="form-control"
-                      placeholder="Phone Number"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="mb-3">
-                  <select class="form-select" required>
-                    <option selected disabled value="">
-                      Financing Needed For
-                    </option>
-                    <option>Working Capital</option>
-                    <option>Equipment Purchase</option>
-                    <option>Expansion</option>
-                    <option>Inventory</option>
-                    <option>Other</option>
-                  </select>
-                </div>
-                <div class="mb-3">
-                  <select class="form-select" required>
-                    <option selected disabled value="">Monthly Revenue</option>
-                    <option>$8,000 - $25,000</option>
-                    <option>$25,001 - $50,000</option>
-                    <option>$50,001 - $100,000</option>
-                    <option>$100,001 - $500,000</option>
-                    <option>$500,001+</option>
-                  </select>
-                </div>
-                <div class="mb-3">
-                  <textarea
-                    class="form-control"
-                    rows="3"
-                    placeholder="Additional Information (Optional)"
-                  ></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">
-                  Submit Application
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CTA Section -->
-    <section class="cta-section text-center">
-      <div class="container">
-        <div class="cta-content" data-aos="zoom-in">
-          <h2 class="mb-4">
-            Faster than a bank, and more flexible than any working capital
-            lender
-          </h2>
-          <p class="mb-4">
-            Get the funding your business needs today without the hassle and
-            wait time of traditional lenders.
-          </p>
-          <button class="btn btn-qualify btn-lg">Apply Now</button>
+    <!-- Invoice Factoring Section -->
+    <section class="invoice-factoring-section">
+      <div class="container text-center py-5">
+        <div data-aos="fade-up">
+          <h2 class="invoice-title">INVOICE FACTORING</h2>
+          <h2 class="credit-title">& LINES OF CREDIT</h2>
         </div>
       </div>
     </section>
