--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <span class="gold-text">GoldStone</span>
         </a>
         <button
@@ -53,16 +53,16 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">What We Offer</a>
+              <a class="nav-link active" href="#">What We Offer</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about">About Us</a>
+              <a class="nav-link" href="index.html#about">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#faq">FAQ</a>
+              <a class="nav-link" href="index.html#faq">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link btn-qualify" href="#apply">Apply Now</a>
+              <a class="nav-link btn-qualify" href="#">Apply Now</a>
             </li>
           </ul>
         </div>
@@ -82,7 +82,11 @@
               forward.
             </p>
             <button class="btn btn-primary btn-lg me-3 mb-3 mb-lg-0">
-              MORE QUESTIONS?
+              <a
+                href="index.html#faq"
+                style="color: white; text-decoration: none"
+                >MORE QUESTIONS?</a
+              >
             </button>
           </div>
           <div
@@ -174,7 +178,7 @@
       <div class="container text-center">
         <div class="product-difference-header position-relative">
           <img
-            src="img/coin-icon.png"
+            src="img/coin-gold-capital-funding.png"
             alt="Coin"
             class="coin-icon coin-left"
             data-aos="fade-right"
@@ -184,7 +188,7 @@
             <h2 class="section-subtitle">ARE DIFFERENT</h2>
           </div>
           <img
-            src="img/coin-icon.png"
+            src="img/coin-gold-capital-funding.png"
             alt="Coin"
             class="coin-icon coin-right"
             data-aos="fade-left"
