--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">What We Offer</a>
+              <a class="nav-link" href="what-we-offer.html">What We Offer</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#about">About Us</a>
@@ -87,9 +87,6 @@
                 style="color: white; text-decoration: none"
                 >Apply Now</a
               >
-            </button>
-            <button class="btn btn-outline-light btn-lg mb-3 mb-lg-0">
-              Learn More
             </button>
           </div>
           <div
@@ -733,8 +730,8 @@
             </div>
             <div class="col-md-6 text-md-end">
               <ul class="footer-links">
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="terms.html">Terms of Service</a></li>
                 <li><a href="#">Sitemap</a></li>
               </ul>
             </div>
